--- a/index.html
+++ b/index.html
@@ -184,6 +184,67 @@
             <div class="right">
                 <img src="CODING.png" alt="coding bro image">
             </div>
+            Lorem Ipsum
+"Consectetur adipisicing elit. Etiam venenatis tortor sed lectus Lorem Ipsum Plates Porta Massa
+Lorem Ipsum.
+Quid Novi?
+Lorem Ipsum
+Dolor
+Sit Amet
+Consectetur
+Adipscing
+Sed do Eusmod
+Incidunt ut Labore
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis tellus. Donec ante dolor, iaculis nec, gravida ac, cursus in, eros. Mauris vestibulum, fetis et egestas ullamcorper, purus nibh vehicula sem, eu egestas ante nis non justo. Fusce tincidunt, lorem nev dapibus consectetur, eo orci mottis ipsum, eget suscipit eros purus in ante.
+Aliqua
+Exercitation
+Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore) et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat Duis aute irure dolor in At ipsum vitae est lacinia tincidunt. Maecenas elit orci reprehenderit in coluptate velit esse gravida ut, molestie non, venenatis vel, lorem. Sed cillum dolore eu fugiat nulla pariatur. lacinia. Suspendisse potenti. Sed ultricies cursus Excepteur sint occaecat cupidatat officia deserunt mollit anim id est
+Vitse
+Venenatis
+Lacinia
+Cursus
+Vestibulum
+Gravida
+lectus. In id magna sit amet nibh suspicit euismod. non proident, sunt in culpa qui Integer enim. Donec sapien ante, accumsan ut sodales commodo, auctor quis, lacus. Maecenas a elaborum incinsa uma posiere sodales. Curabitur pede pede. molestie id, blandit vitae, varus ac, purus. Mauris at ipsum vitne est lacinia tincidunt. Maecenas eit orci, gravida at, molestie non, venenatis vel lorem Sed lacinia. Suspendisse potent. Sed utrucies cursus lectus, in id magna sit amet nibh suspicit euismod, integer enim Donec sapien ante, accumsan ut, sodales commodo, auctor quis, lacus, Maecenas a elit lacinia urna posuere sodales. Curabitur pede pede, molestie id blandit vitae, varius ac purus
+Potenti
+Accumsan
+Rhoncus
+Torquent
+Phasellus
+Тетрог
+Auctor Morbi dictum Vestibulum adipiscing pulvinar quam. In aliquam rhoncus sem in mi erat, sodales eget, pretium interdum malesuada at, augue. Aliquam solicitudin, massa ut vestibulum posuere, massa arcu element purus, eget vehicula lorem metus vet shero. Sed in dui id lectus commodo elementum. Enam rhoncus tortor. Prom a lorem. Ut nec velit. Quisque varius. Proin nonummy justo dictum sapien tincidunt iaculis. Duis lobortis petentesque risu Aenean ut tortor imperdiet dolor scelerisque bibendum. Fusce metus nibh. adipiscing id, ullamcorper at, consequat a
+Phasellus orci. Etiam tempor eut auctor magna. Nullam nibh velit, vestibulum ut, eleifend non, pulvinar eget, enim. Cla aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Integer velit mauris, convallis a congue sed, placerat id, odio. Etiam venenatis tortor sed lectus. Nulla non orci. In egestas porttitor quam. Duis nec dia eget nibh mattis tempus. Curabitus accumsan pede id odio. Nunc vitae libero, Aenean condimentum diam et turpis. Vestibulum non risus. Ut consectetuer gravida elit. Aenean est nunc varius sed, alquam eu, feugiat sit amet, metus, S venenatis odio id eros.
+Phasellus placerat purus vel m. In hac habitasse platea dictumst. Donec aliquam porta odio. Ut tacilisis. Donec ornare ipsum ut massa. In tellus tellus, imperdiet ac, accumsan at, aliquam vitae, velit.Lorem Ipsum
+"Consectetur adipisicing elit. Etiam venenatis tortor sed lectus Lorem Ipsum Plates Porta Massa
+Lorem Ipsum.
+Quid Novi?
+Lorem Ipsum
+Dolor
+Sit Amet
+Consectetur
+Adipscing
+Sed do Eusmod
+Incidunt ut Labore
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis tellus. Donec ante dolor, iaculis nec, gravida ac, cursus in, eros. Mauris vestibulum, fetis et egestas ullamcorper, purus nibh vehicula sem, eu egestas ante nis non justo. Fusce tincidunt, lorem nev dapibus consectetur, eo orci mottis ipsum, eget suscipit eros purus in ante.
+Aliqua
+Exercitation
+Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore) et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat Duis aute irure dolor in At ipsum vitae est lacinia tincidunt. Maecenas elit orci reprehenderit in coluptate velit esse gravida ut, molestie non, venenatis vel, lorem. Sed cillum dolore eu fugiat nulla pariatur. lacinia. Suspendisse potenti. Sed ultricies cursus Excepteur sint occaecat cupidatat officia deserunt mollit anim id est
+Vitse
+Venenatis
+Lacinia
+Cursus
+Vestibulum
+Gravida
+lectus. In id magna sit amet nibh suspicit euismod. non proident, sunt in culpa qui Integer enim. Donec sapien ante, accumsan ut sodales commodo, auctor quis, lacus. Maecenas a elaborum incinsa uma posiere sodales. Curabitur pede pede. molestie id, blandit vitae, varus ac, purus. Mauris at ipsum vitne est lacinia tincidunt. Maecenas eit orci, gravida at, molestie non, venenatis vel lorem Sed lacinia. Suspendisse potent. Sed utrucies cursus lectus, in id magna sit amet nibh suspicit euismod, integer enim Donec sapien ante, accumsan ut, sodales commodo, auctor quis, lacus, Maecenas a elit lacinia urna posuere sodales. Curabitur pede pede, molestie id blandit vitae, varius ac purus
+Potenti
+Accumsan
+Rhoncus
+Torquent
+Phasellus
+Тетрог
+Auctor Morbi dictum Vestibulum adipiscing pulvinar quam. In aliquam rhoncus sem in mi erat, sodales eget, pretium interdum malesuada at, augue. Aliquam solicitudin, massa ut vestibulum posuere, massa arcu element purus, eget vehicula lorem metus vet shero. Sed in dui id lectus commodo elementum. Enam rhoncus tortor. Prom a lorem. Ut nec velit. Quisque varius. Proin nonummy justo dictum sapien tincidunt iaculis. Duis lobortis petentesque risu Aenean ut tortor imperdiet dolor scelerisque bibendum. Fusce metus nibh. adipiscing id, ullamcorper at, consequat a
+Phasellus orci. Etiam tempor eut auctor magna. Nullam nibh velit, vestibulum ut, eleifend non, pulvinar eget, enim. Cla aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Integer velit mauris, convallis a congue sed, placerat id, odio. Etiam venenatis tortor sed lectus. Nulla non orci. In egestas porttitor quam. Duis nec dia eget nibh mattis tempus. Curabitus accumsan pede id odio. Nunc vitae libero, Aenean condimentum diam et turpis. Vestibulum non risus. Ut consectetuer gravida elit. Aenean est nunc varius sed, alquam eu, feugiat sit amet, metus, S venenatis odio id eros.
+Phasellus placerat purus vel m. In hac habitasse platea dictumst. Donec aliquam porta odio. Ut tacilisis. Donec ornare ipsum ut massa. In tellus tellus, imperdiet ac, accumsan at, aliquam vitae, velit.
         </div>
    
 
